ext_authz/protected/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio.io/rev: default
  name: protected
