ext_authz/protected/http-service.yml
apiVersion: v1
kind: Service
metadata:
  name: http
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
      appProtocol: http
  selector:
    app: http
  sessionAffinity: None
  type: ClusterIP
