ext_authz/protected/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    zonename: zone1
  name: http
spec:
  host: http.apps.example.com
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: gateway-v1
    weight: 100
  wildcardPolicy: None
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    zonename: zone1
  name: oauth
spec:
  host: oauth-mesh.apps.example.com
  port:
    targetPort: https
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: passthrough
  to:
    kind: Service
    name: gateway-v1
    weight: 100
  wildcardPolicy: None
---
